--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"],
+  "plugins": ["prettier"],
+  "ignorePatterns": ["/*", "!/src"],
+  "rules": {
+    "prettier/prettier": 2
+  }
 }
